[workspace]
resolver = "2"

members = [
    "configs",
    "configs_builder",
    "messaging",
    "rabbitmq",
    "kafka",
    "auth",
    "health_readiness",
    "http_components",
    "http_server",
    "tiny_server",
    "logging",
    "metrics",
    "migrator",
    "mqtt",
    "otel",
    "secrets_manager",
    "sql_pool",
    "traces",
]