[package]
name = "amqp"
version = "0.1.0"
edition = "2021"

[features]
mocks = ["dep:mockall"]

[dependencies]
configs = { path = "../configs" }
traces = { path = "../traces" }

lapin = { version = "2.1.1" }
opentelemetry = { version = "0.19.0" }
uuid = { version = "1.3.4", features = ["v4"] }
async-trait = { version = "0.1.71" }
tracing = { version = "0.1.37" }
serde_json = { version = "1.0.100" }
serde = { version = "1.0.167", features = ["derive"] }
tokio = { version = "1.29.1", features = ["default"] }
futures-util = { version = "0.3.28"}
thiserror = { version = "1.0.43" }

# Used only with feature mock
mockall = { version = "0.11.4", optional = true }

[dev-dependencies]
mockall = { version = "0.11.4" }
