[package]
name = "amqp_t"
version = "0.1.0"
edition = "2021"

[dependencies]
amqp = { path = "../amqp"}
env = { path = "../env" }

lapin = { version = "2.1.1" }
opentelemetry = { version = "0.18.0" }
uuid = { version = "1.3.0", features = ["v4"] }
async-trait = { version = "0.1.64" }
tracing = { version = "0.1.37" }
serde_json = { version = "1.0.94" }
serde = { version = "1.0.158", features = ["derive"] }
tokio = { version = "1.26.0", features = ["default", "macros", "rt-multi-thread"] }
futures-util = { version = "0.3.27"}
thiserror = { version = "1.0.38" }
