[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
configs = { path = "../configs" }

serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.112" }
tracing = { version = "0.1.40" }
async-trait = { version = "0.1.77" }
opentelemetry = { version = "0.21.0" }
alcoholic_jwt = { version =  "4091.0.0 " }
tokio = { version = "1.35.1", features = ["sync"] }
reqwest = { version = "0.11.23", features = ["json"] }