[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
configs = { path = "../configs" }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
opentelemetry = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
alcoholic_jwt = { version =  "4091.0.0" }
reqwest = { version = "0.11.24", features = ["json"] }