[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
configs = { path = "../configs" }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
opentelemetry = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
reqwest = { version = "0.12.3", features = ["json"] }
moka = { version = "0.12.7", features = ["future"] }
jsonwebtoken = { version = "9.3.0" }