[package]
name = "configs-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
configs = { path = "../configs" }
secrets-manager = { path = "../secrets_manager" }
logging = { path = "../logging" }

dotenvy = { version = "0.15.7" }
base64 = { version = "0.21.2" }
tracing = { version = "0.1.37" }
thiserror = { version = "1.0.43" }
