[package]
name = "configs-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
configs = { path = "../configs" }
secrets-manager = { path = "../secrets_manager" }
logging = { path = "../logging" }

thiserror = { workspace = true }
tracing = { workspace = true }
dotenvy = { version = "0.15.7" }
base64 = { version = "0.22" }
