[package]
name = "health-readiness"
version = "0.1.0"
edition = "2021"

[features]
mqtt = ["dep:paho-mqtt"]
rabbitmq = ["dep:lapin"]
postgres = ["dep:deadpool-postgres"]

[dependencies]
configs = { path = "../configs" }

async-trait = { version = "0.1.73" }
tracing = { version = "0.1.40" }
actix-web = { version = "4.3.1" }
thiserror = { version = "1.0.50" }

# mqtt
paho-mqtt = { version = "0.12.1", optional = true }

#  rabbitmq
lapin = { version = "2.3.1", optional = true }

# postgres
deadpool-postgres = { version = "0.11.0", optional = true }

