[package]
name = "health-readiness"
version = "0.1.0"
edition = "2021"

[features]
mqtt = ["dep:paho-mqtt"]
rabbitmq = ["dep:lapin"]
postgres = ["dep:deadpool-postgres"]

[dependencies]
async-trait = { version = "0.1.77" }
tracing = { version = "0.1.40" }
thiserror = { version = "1.0.56" }

# mqtt
paho-mqtt = { version = "0.12.1", optional = true }

#  rabbitmq
lapin = { version = "2.3.1", optional = true }

# postgres
deadpool-postgres = { version = "0.12.1", optional = true }

