[package]
name = "health-readiness"
version = "0.1.0"
edition = "2021"

[features]
mqtt = ["dep:paho-mqtt"]
rabbitmq = ["dep:lapin"]
postgres = ["dep:deadpool-postgres"]

[dependencies]
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

# mqtt
paho-mqtt = { version = "0.12.3", optional = true }

#  rabbitmq
lapin = { version = "2.3.3", optional = true }

# postgres
deadpool-postgres = { version = "0.13.0", optional = true }

