[package]
name = "http-components"
version = "0.1.0"
edition = "2021"

[features]
tracing = ["dep:otel"]
metrics = ["dep:otel", "dep:opentelemetry-semantic-conventions", "dep:opentelemetry-prometheus", "dep:prometheus"]
openapi = ["dep:utoipa"]
auth = ["dep:auth"]
validator = ["dep:validator"]
health = ["dep:health-readiness"]

[dependencies]
actix-web = { version = "4.5.1" }
actix-http = { version = "3.6.0" }
actix-cors = { version = "0.7.0" }
futures-util = { version = "0.3.30" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
opentelemetry = { workspace = true }

# openapi
utoipa = { version = "4.2.0", optional = true }

# validator
validator = { version = "0.16.1", features = ["derive"], optional = true }

# auth
auth = { path = "../auth", optional = true }

# metrics and tracing
otel = { path = "../otel", optional = true }

# metrics 
opentelemetry-semantic-conventions = { git = "ssh://git@github.com/open-telemetry/opentelemetry-rust.git", rev = "v0.21.2", optional = true }
opentelemetry-prometheus = { git = "ssh://git@github.com/open-telemetry/opentelemetry-rust.git", rev = "v0.21.2", optional = true }
prometheus = { version = "0.13.3", optional = true }

# health
health-readiness = { path = "../health_readiness", optional =  true }