[package]
name = "http-server"
version = "0.1.0"
edition = "2021"

[features]
openapi = ["dep:utoipa", "dep:utoipa-swagger-ui"]

[dependencies]
configs = { path = '../configs' }
http-components = { path = '../http_components', features = ["tracing", "metrics", "validator", "openapi", "auth"] }
health-readiness = { path = '../health_readiness' }
auth = { path = "../auth" }

thiserror = { version = "1.0.56" }
actix-web = { version = "4.4.1" }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = { version = "1.0.111" }
tracing = { version = "0.1.40" }
opentelemetry = { version = "0.21.0" }

# Swagger
utoipa = { version = "4.1.0", features = ["actix_extras"], optional = true }
utoipa-swagger-ui = { version = "5.0.0", features = ["actix-web"], optional = true }
