[package]
name = "http-server"
version = "0.1.0"
edition = "2021"

[features]
openapi = ["dep:utoipa", "dep:utoipa-swagger-ui"]

[dependencies]
configs = { path = '../configs' }
http-components = { path = '../http_components', features = ["tracing", "metrics", "openapi", "health"] }
health-readiness = { path = '../health_readiness' }
auth = { path = "../auth" }

actix-web = { version = "4.5.1" }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
opentelemetry = { workspace = true }

# Swagger
utoipa = { version = "4.2.0", features = ["actix_extras"], optional = true }
utoipa-swagger-ui = { version = "6.0.0", features = ["actix-web"], optional = true }
