[package]
name = "httpw"
version = "0.1.0"
edition = "2021"

[dependencies]
configs = { path = '../configs' }
http-components = { path = '../http_components' }
health-readiness = { path = '../health_readiness' }
auth = { path = "../auth" }

thiserror = { version = "1.0.40" }
actix-web = { version = "4.3.1" }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = { version = "1.0.96" }
tracing = { version = "0.1.37" }
opentelemetry = { version = "0.19.0" }
# actix-web-opentelemetry = { git = "https://github.com/hedrosistemas/actix-web-opentelemetry.git", branch="main", features = ["metrics"] }
utoipa = { version = "3.2.1", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["actix-web"] }
