[package]
name = "httpw"
version = "0.1.0"
edition = "2021"

[dependencies]
configs = { path = '../configs' }
http-components = { path = '../http_components', features = ["tracing", "metrics", "validator", "openapi", "auth"] }
health-readiness = { path = '../health_readiness' }
auth = { path = "../auth" }

thiserror = { version = "1.0.44" }
actix-web = { version = "4.3.1" }
serde = { version = "1.0.180", features = ["derive"] }
serde_json = { version = "1.0.104" }
tracing = { version = "0.1.37" }
opentelemetry = { version = "0.20.0" }
utoipa = { version = "3.4.4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3.1.4", features = ["actix-web"] }
