[package]
name = "kafka"
version = "0.1.0"
edition = "2021"

[dependencies]
configs = { path = "../configs" }
messaging = { path = "../messaging" }

rdkafka = { version = "0.36.2" }
async-trait = { version = "0.1.77" }
opentelemetry = { version = "0.21.0" }
tracing = { version = "0.1.40" }
tokio = { version = "1.35.1", features = ["default"] }
