[package]
name = "kafka"
version = "0.1.0"
edition = "2021"

[dependencies]
configs = { path = "../configs" }
messaging = { path = "../messaging" }

rdkafka = { version = "0.36.2" }
async-trait = { workspace = true }
opentelemetry = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["default"] }
thiserror = { workspace = true }
