[package]
name = "logging"
version = "0.1.0"
edition = "2021"

[dependencies]
configs = { path = "../configs" }

tracing-bunyan-formatter = { version = "0.3.6" }
tracing-subscriber = { version = "0.3.17" }
tracing-log = { version = "0.1.3" }
tracing = { version = "0.1.37" }
thiserror = { version = "1.0.40" }