[package]
name = "logging"
version = "0.1.0"
edition = "2021"

[dependencies]
configs = { path = "../configs" }

tracing-bunyan-formatter = { version = "0.3.9" }
tracing-subscriber = { version = "0.3.18" }
tracing-log = { version = "0.2.0" }
tracing = { workspace = true }
thiserror = { workspace = true }