[package]
name = "messaging"
version = "0.1.0"
edition = "2021"

[features]
mocks = ["dep:mockall"]

[dependencies]
opentelemetry = { version = "0.21.0" }
async-trait = { version = "0.1.73" }

# mock
mockall = { version = "0.11.4", optional = true }

[dev-dependencies]
mockall = { version = "0.11.4" }
