[package]
name = "messaging"
version = "0.1.0"
edition = "2021"

[features]
mocks = ["dep:mockall"]

[dependencies]
opentelemetry = { version = "0.21.0" }
async-trait = { version = "0.1.77" }
thiserror = { version = "1.0.56" }

# mock
mockall = { version = "0.12.0", optional = true }

[dev-dependencies]
mockall = { version = "0.12.0" }
