[package]
name = "messaging"
version = "0.1.0"
edition = "2021"

[features]
mocks = ["dep:mockall"]

[dependencies]
opentelemetry = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }

# mock
mockall = { version = "0.12.1", optional = true }

[dev-dependencies]
mockall = { version = "0.12.1" }
