[package]
name = "metrics"
version = "0.1.0"
edition = "2021"

[features]
prometheus = ["dep:opentelemetry-prometheus"]
otlp = ["dep:opentelemetry-otlp", "dep:tonic", "dep:tokio"]
stdout = ["dep:opentelemetry-stdout", "dep:tokio"]

[dependencies]
configs = { path = "../configs" }

opentelemetry = { version = "0.21.0", features = ["metrics"] }
opentelemetry_sdk = { version = "0.21.2", features = ["metrics", "rt-tokio"] }
tracing = { version = "0.1.40" }
thiserror = { version = "1.0.56" }

# OTLP Featue
tonic = { version = "0.9.2", features = ["tls"], optional = true }
tokio = { version = "1.35.1", features = ["default"], optional = true }
opentelemetry-otlp = { version = "0.14.0", features = ["tonic", "metrics", "grpc-tonic" , "tls", "tls-roots"], optional = true }

# Prometheus Feature
prometheus = { version = "0.13.3" }
opentelemetry-prometheus = { version = "0.14.1", optional = true }

# Stdout
opentelemetry-stdout = { version = "0.2.0", features = ["metrics"], optional = true }