[package]
name = "metrics"
version = "0.1.0"
edition = "2021"

[features]
prometheus = ["dep:opentelemetry-prometheus"]
otlp = ["dep:opentelemetry-otlp", "dep:tonic", "dep:tokio"]
stdout = ["dep:opentelemetry-stdout", "dep:tokio"]

[dependencies]
configs = { path = "../configs" }

opentelemetry = { workspace = true, features = ["metrics"] }
opentelemetry_sdk = { version = "0.21.2", features = ["metrics", "rt-tokio"] }
tracing = { workspace = true }
thiserror = { workspace = true }

# OTLP Featue
tonic = { workspace = true, features = ["tls"], optional = true }
tokio = { workspace = true, features = ["default"], optional = true }
opentelemetry-otlp = { git = "ssh://git@github.com/open-telemetry/opentelemetry-rust.git", rev = "v0.21.2", features = ["tonic", "metrics", "grpc-tonic" , "tls", "tls-roots"], optional = true }

# Prometheus Feature
prometheus = { version = "0.13.3" }
opentelemetry-prometheus = { git = "ssh://git@github.com/open-telemetry/opentelemetry-rust.git", rev = "v0.21.2", optional = true }

# Stdout
opentelemetry-stdout = { git = "ssh://git@github.com/open-telemetry/opentelemetry-rust.git", rev = "v0.21.2", features = ["metrics"], optional = true }