[package]
name = "metrics"
version = "0.1.0"
edition = "2021"

[features]
prometheus = ["dep:opentelemetry-prometheus"]
otlp = ["dep:opentelemetry-otlp", "dep:tonic", "dep:tokio"]
stdout = ["dep:opentelemetry-stdout", "dep:tokio"]

[dependencies]
configs = { path = "../configs" }

opentelemetry = { workspace = true, features = ["metrics"] }
opentelemetry_sdk = { workspace = true, features = ["metrics", "rt-tokio"] }
tracing = { workspace = true }
thiserror = { workspace = true }

# OTLP Featue
tonic = { workspace = true, features = ["tls"], optional = true }
tokio = { workspace = true, features = ["default"], optional = true }
opentelemetry-otlp = { version = "0.15", features = ["metrics", "prost", "grpc-tonic", "gzip-tonic","tls", "tls-roots"], optional = true }

# Prometheus Feature
prometheus = { version = "0.13.3" }
opentelemetry-prometheus = { version = "0.15", optional = true }

# Stdout
opentelemetry-stdout = { version = "0.3", features = ["metrics"], optional = true }