[package]
name = "migrator"
version = "0.1.0"
edition = "2021"

[features]
postgres = ["dep:deadpool-postgres"]
sqlite = ["dep:deadpool-sqlite"]

[dependencies]
configs = { path = "../configs" }
logging = { path = "../logging" }

async-trait = { version = "0.1.73" }
tracing = { version = "0.1.37" }
thiserror = { version = "1.0.50" }

deadpool-postgres = { version = "0.10.5", optional = true }
deadpool-sqlite = { version = "0.5.0", optional = true }