[package]
name = "migrator"
version = "0.1.0"
edition = "2021"

[features]
postgres = ["dep:deadpool-postgres"]
sqlite = ["dep:deadpool-sqlite"]

[dependencies]
configs = { path = "../configs" }
logging = { path = "../logging" }

async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

deadpool-postgres = { version = "0.13.0", optional = true }
deadpool-sqlite = { version = "0.8.0", optional = true }