[package]
name = "mqtt"
version = "0.1.0"
edition = "2021"

[features]
mocks = ["dep:mockall"]

[dependencies]
configs = { path = "../configs" }
traces = { path = "../traces" }

opentelemetry = { version = "0.21.0" }
tracing = { version = "0.1.40" }
async-trait = { version = "0.1.73" }
bytes = { version = "1.5.0", features = ["serde"] }
paho-mqtt = { version = "0.12.3" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108" }
futures-util = { version = "0.3.26" }
thiserror = { version = "1.0.50" }

# Used only with feature mock
mockall = { version = "0.11.4", optional = true }

[dev-dependencies]
mockall = { version = "0.11.4" }
tokio = { version = "1.34.0" }