[package]
name = "mqtt"
version = "0.1.0"
edition = "2021"

[features]
mocks = ["dep:mockall"]

[dependencies]
configs = { path = "../configs" }
traces = { path = "../traces" }
messaging = { path = "../messaging" }

opentelemetry = { version = "0.21.0" }
tracing = { version = "0.1.40" }
async-trait = { version = "0.1.77" }
bytes = { version = "1.5.0", features = ["serde"] }
paho-mqtt = { version = "0.12.3" }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.112" }
futures-util = { version = "0.3.26" }
thiserror = { version = "1.0.56" }

# Used only with feature mock
mockall = { version = "0.12.0", optional = true }

[dev-dependencies]
messaging = { path = "../messaging", features = ["mocks"] }

mockall = { version = "0.12.0" }
tokio = { version = "1.35.1" }