[package]
name = "mqtt"
version = "0.1.0"
edition = "2021"

[features]
mocks = ["dep:mockall"]

[dependencies]
configs = { path = "../configs" }
traces = { path = "../traces" }
messaging = { path = "../messaging" }

opentelemetry = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
bytes = { version = "1.6.0", features = ["serde"] }
paho-mqtt = { version = "0.12.3" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
futures-util = { version = "0.3.30" }
thiserror = { workspace = true }

# Used only with feature mock
mockall = { version = "0.12.1", optional = true }

[dev-dependencies]
messaging = { path = "../messaging", features = ["mocks"] }

mockall = { version = "0.12.1" }
tokio = { workspace = true }