[package]
name = "postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env = { path = "../env" }
deadpool-postgres = { version = "0.10.2" }
tokio-postgres = { version = "0.7.6",  features = ["with-chrono-0_4", "with-uuid-0_8"] }
async-trait = { version = "0.1.56" }
chrono = { version = "0.4.22" }
tokio = { version = "1.17.0", features = ["full"] }
