[package]
name = "postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
env = { path = "../env" }
deadpool-postgres = { version = "0.10.2" }
tokio-postgres = { version = "0.7.7",  features = ["with-chrono-0_4", "with-uuid-0_8"] }
# chrono = { version = "0.4.22" }
# async-trait = { version = "0.1.58" }
# tokio = { version = "1.21.2", features = ["default"] }