[package]
name = "rabbitmq"
version = "0.1.0"
edition = "2021"

[dependencies]
configs = { path = "../configs" }
messaging = { path = "../messaging" }
traces = { path = "../traces" }

lapin = { version = "2.3.1" }
opentelemetry = { version = "0.21.0" }
uuid = { version = "1.7.0", features = ["v4"] }
async-trait = { version = "0.1.77" }
tracing = { version = "0.1.40" }
serde_json = { version = "1.0.112" }
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.35.1", features = ["default"] }
futures-util = { version = "0.3.30"}
thiserror = { version = "1.0.56" }

[dev-dependencies]
mockall = { version = "0.12.0" }
