[package]
name = "rabbitmq"
version = "0.1.0"
edition = "2021"

[dependencies]
configs = { path = "../configs" }
messaging = { path = "../messaging" }
traces = { path = "../traces" }

lapin = { version = "2.3.3" }
opentelemetry = { workspace = true }
uuid = { version = "1.8.0", features = ["v4"] }
async-trait = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["default"] }
futures-util = { version = "0.3.30"}
thiserror = { workspace = true }

[dev-dependencies]
mockall = { version = "0.12.1" }
