[package]
name = "rabbitmqv2"
version = "0.1.0"
edition = "2021"

[features]
mocks = ["dep:mockall"]

[dependencies]
configs = { path = "../configs" }
messaging = { path = "../messaging" }
traces = { path = "../traces" }

lapin = { version = "2.3.1" }
opentelemetry = { version = "0.21.0" }
uuid = { version = "1.6.1", features = ["v4"] }
async-trait = { version = "0.1.73" }
tracing = { version = "0.1.40" }
serde_json = { version = "1.0.108" }
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.34.0", features = ["default"] }
futures-util = { version = "0.3.28"}
thiserror = { version = "1.0.50" }

# Used only with feature mock
mockall = { version = "0.11.4", optional = true }

[dev-dependencies]
mockall = { version = "0.11.4" }
