[package]
name = "secrets-manager"
version = "0.1.0"
edition = "2021"

[features]
mocks = ["dep:mockall"]

[dependencies]
async-trait = { version = "0.1.73" }
tracing = { version = "0.1.40" }
aws-config = { version = "0.57.2" }
aws-sdk-secretsmanager = { version = "0.36.0" }
serde_json = { version = "1.0.108" }
thiserror = { version = "1.0.50" }

# Used only with feature mock
mockall = { version = "0.11.4", optional = true }

[dev-dependencies]
mockall = { version = "0.11.4" }
tokio = { version = "1.34.0", features = ["macros"] }
