[package]
name = "secrets-manager"
version = "0.1.0"
edition = "2021"

[features]
mocks = ["dep:mockall"]

[dependencies]
async-trait = { version = "0.1.77" }
tracing = { version = "0.1.40" }
aws-config = { version = "1.1.3" }
aws-sdk-secretsmanager = { version = "1.13.0" }
serde_json = { version = "1.0.111" }
thiserror = { version = "1.0.56" }

# Used only with feature mock
mockall = { version = "0.12.0", optional = true }

[dev-dependencies]
mockall = { version = "0.12.0" }
tokio = { version = "1.35.1", features = ["macros"] }
