[package]
name = "sql-pool"
version = "0.1.0"
edition = "2021"

[features]
postgres = ["dep:deadpool-postgres", "dep:tokio-postgres"]
sqlite = ["dep:deadpool-sqlite"]

[dependencies]
configs = { path = "../configs" }

tracing = { version = "0.1.37" }
thiserror = { version = "1.0.40" }


##
deadpool-postgres = { version = "0.10.5", optional = true }
tokio-postgres = { version = "0.7.8",  features = ["with-chrono-0_4", "with-uuid-0_8"], optional = true }
##
deadpool-sqlite = { version = "0.5.0", optional = true }