[package]
name = "sql-pool"
version = "0.1.0"
edition = "2021"

[features]
postgres = ["dep:deadpool-postgres", "dep:tokio-postgres"]
sqlite = ["dep:deadpool-sqlite"]

[dependencies]
configs = { path = "../configs" }

tracing = { version = "0.1.40" }
thiserror = { version = "1.0.50" }

# PostgreSQL dep
deadpool-postgres = { version = "0.11.0", optional = true }
tokio-postgres = { version = "0.7.10",  features = ["with-chrono-0_4", "with-uuid-0_8"], optional = true }

# SQLite dep
deadpool-sqlite = { version = "0.7.0", optional = true }