[package]
name = "sql-pool"
version = "0.1.0"
edition = "2021"

[features]
postgres = ["dep:deadpool-postgres", "dep:tokio-postgres"]
sqlite = ["dep:deadpool-sqlite"]

[dependencies]
configs = { path = "../configs" }

tracing = { workspace = true }
thiserror = { workspace = true }

# PostgreSQL dep
deadpool-postgres = { version = "0.13.0", optional = true }
tokio-postgres = { version = "0.7.10",  features = ["with-chrono-0_4", "with-uuid-0_8"], optional = true }

# SQLite dep
deadpool-sqlite = { version = "0.8.0", optional = true }