[package]
name = "traces"
version = "0.1.0"
edition = "2021"

[features]
otlp = ["dep:opentelemetry-otlp"]
stdout = ["dep:opentelemetry-stdout"]

[dependencies]
configs = { path = "../configs" }

opentelemetry = { version = "0.21.0" }
opentelemetry_sdk = { version = "0.21.2", features = ["rt-tokio"]}
tracing = { version = "0.1.40" }
thiserror = { version = "1.0.56" }
serde = { version = "1.0.195", features = ["derive"] }
tonic = { version = "0.9.2", features = ["tls"] }
tokio = { version = "1.35.1", features = ["default"] }

opentelemetry-otlp = { version = "0.14.0", features = ["tonic", "tls", "tls-roots"], optional = true }

opentelemetry-stdout = { version = "0.2.0", features = ["trace"], optional = true }