[package]
name = "traces"
version = "0.1.0"
edition = "2021"

[features]
otlp = ["dep:opentelemetry-otlp"]
stdout = ["dep:opentelemetry-stdout"]

[dependencies]
configs = { path = "../configs" }

opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"]}
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tonic = { workspace = true, features = ["tls"] }
tokio = { workspace = true, features = ["default"] }

opentelemetry-otlp = { git = "ssh://git@github.com/open-telemetry/opentelemetry-rust.git", rev = "v0.21.2", features = ["tonic", "tls", "tls-roots"], optional = true }

opentelemetry-stdout = { git = "ssh://git@github.com/open-telemetry/opentelemetry-rust.git", rev = "v0.21.2", features = ["trace"], optional = true }